--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -584,9 +584,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
   @AuraEnabled
   global static String getBatchRollupStatus(String jobId) {
-    if (currentJobId != null) {
-      jobId = currentJobId;
-    }
+    jobId = currentJobId ?? jobId;
     return [SELECT Status FROM AsyncApexJob WHERE Id = :jobId LIMIT 1]?.Status;
   }
 
@@ -637,7 +635,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     global String rollupContext;
 
     // optional fields shared with RollupFlowBulkProcessor.FlowInput
-    @InvocableVariable(label='Defer processing')
+    @InvocableVariable(label='Defer processing' defaultValue='false')
     global Boolean deferProcessing = false;
     @InvocableVariable(label='Child Object Type When Rollup Started From Parent')
     global String calcItemTypeWhenRollupStartedFromParent;
@@ -680,16 +678,29 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     global String groupByRowStartDelimiter;
     @InvocableVariable(label='One To Many Grandparent Fields (Comma separated list)')
     global String oneToManyGrandparentFields;
-    @InvocableVariable(label='Is Distinct' description='If provided, children item values are de-duplicated prior to calculating rollup values')
+    @InvocableVariable(
+      label='Is Distinct'
+      defaultValue='false'
+      description='If provided, children item values are de-duplicated prior to calculating rollup values'
+    )
     global Boolean isDistinct = false;
     @InvocableVariable(
       label='Is Full Record Set'
-      description='If provided, does not try to abort rollup calculation early if no records match, and instead resets the rollup field value'
+      defaultValue='false'
+      description='If true, SUM and COUNT-based rollups retrieve other related children records prior to performing rollup'
     )
-    global Boolean isFullRecordSet;
-    @InvocableVariable(label='Is Rollup Started From Parent' description='If the calc records are the parent records, set this to true')
+    global Boolean isFullRecordSet = false;
+    @InvocableVariable(
+      label='Is Rollup Started From Parent'
+      defaultValue='false'
+      description='If the provided records are the parent records, set this to true'
+    )
     global Boolean isRollupStartedFromParent = false;
-    @InvocableVariable(label='Is Table Formatted' description='If rolling up to a group by text field and you want a table, set this to true')
+    @InvocableVariable(
+      label='Is Table Formatted'
+      defaultValue='false'
+      description='If rolling up to a group by text field and you want a table, set this to true'
+    )
     global Boolean isTableFormatted = false;
     @InvocableVariable(label='Order By (First/Last)')
     global String orderByFirstLast;
@@ -710,22 +721,27 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     global Id parentRecordIdForEmptyChildrenCollections;
     @InvocableVariable(
       label='Should rollup to ultimate hierarchy parent'
+      defaultValue='false'
       description='Used in conjunction with Ultimate Parent Field to drive hierarchical parent rollups'
     )
     global Boolean rollupToUltimateParent = false;
-    @InvocableVariable(label='Sharing Mode' description='Defaults to System, set to User to run with sharing')
+    @InvocableVariable(label='Sharing Mode' defaultValue='System' description='Defaults to System, set to User to run with sharing')
     global String sharingMode;
-    @InvocableVariable(label='Should run sync?' description='Runs rollup calculations synchronously when set to true')
+    @InvocableVariable(label='Should run sync?' defaultValue='false' description='Runs rollup calculations synchronously when set to true')
     global Boolean shouldRunSync = false;
     @InvocableVariable(label='SOQL Where Clause To Exclude Calc Items' description='If provided, excludes records based on a valid SOQL where clause')
     global String calcItemWhereClause;
     @InvocableVariable(label='Ultimate Parent Field' description='The lookup field in hierarchy rollups')
     global String ultimateParentLookup;
 
-    // internal variables!
+    // internal state
     public Id rollupControlId;
     public String developerName;
     public RollupGrouping__mdt rollupGrouping;
+
+    public Boolean shouldOverrideNoOp() {
+      return this.parentRecordIdForEmptyChildrenCollections != null && calcItemTypeWhenRollupStartedFromParent != null;
+    }
   }
 
   global class FlowOutput {
@@ -752,9 +768,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       this.flowInput = flowInput;
       this.rollupContext = rollupContext;
       this.sObjectType = sObjectType;
-      this.shouldOverrideNoOp =
-        this.flowInput.parentRecordIdForEmptyChildrenCollections != null &&
-        this.flowInput.calcItemTypeWhenRollupStartedFromParent != null;
+      this.shouldOverrideNoOp = this.flowInput.shouldOverrideNoOp();
     }
   }
 
@@ -781,11 +795,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       flowInput.rollupOperation = flowInput.rollupOperation.toUpperCase();
       RollupLogger.Instance.log('processing invocable data:', flowInput, System.LoggingLevel.INFO);
 
-      if (
-        flowInput.parentRecordIdForEmptyChildrenCollections != null &&
-        flowInput.calcItemTypeWhenRollupStartedFromParent != null &&
-        flowInput.recordsToRollup?.isEmpty() != false
-      ) {
+      if (flowInput.shouldOverrideNoOp() && flowInput.recordsToRollup?.isEmpty() != false) {
         flowInput.recordsToRollup = new List<SObject>();
         Schema.DescribeSObjectResult childDescribe = RollupFieldInitializer.Current.getDescribeFromName(flowInput.calcItemTypeWhenRollupStartedFromParent);
         SObject stubChild = childDescribe.getSObjectType().newSObject(childDescribe.getKeyPrefix() + '0'.repeat(12));
@@ -852,20 +862,16 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       processCustomMetadata(typeToLocalRollups, metas, children, oldFlowRecords, new Set<String>(), wrapper.rollupContext, fromInvocable, typeToWrappedMeta);
 
       if (wrapper.shouldOverrideNoOp) {
-        List<Rollup> rollups = typeToLocalRollups.get(wrapper.sObjectType);
-        if (rollups != null) {
-          for (Rollup roll : rollups) {
-            roll.isNoOp = false;
-            roll.isNoOpOverridden = true;
-            roll.calcItems = children;
-          }
+        List<Rollup> rollups = typeToLocalRollups.get(wrapper.sObjectType) ?? new List<Rollup>();
+        for (Rollup roll : rollups) {
+          roll.isNoOp = false;
+          roll.isNoOpOverridden = true;
+          roll.calcItems = children;
         }
       }
 
-      if (typeToWinnowedRollups != null) {
-        for (Schema.SObjectType typeKey : typeToWinnowedRollups.keyset()) {
-          CACHED_ROLLUPS.addAll(typeToWinnowedRollups.get(typeKey));
-        }
+      for (Schema.SObjectType typeKey : (typeToWinnowedRollups?.keyset() ?? new Set<Schema.SObjectType>())) {
+        CACHED_ROLLUPS.addAll(typeToWinnowedRollups.get(typeKey));
       }
 
       if (metas.isEmpty() == false) {
@@ -1616,7 +1622,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   global static void runFromCDCTrigger() {
     isCDC = true;
     // CDC always uses Trigger.new
-    List<SObject> cdcRecords = records != null ? records : Trigger.new;
+    List<SObject> cdcRecords = records ?? Trigger.new;
     if (cdcRecords.isEmpty()) {
       return;
     }
@@ -2124,11 +2130,9 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     if (eval != null) {
       queryFields.addAll(eval.getQueryFields());
     }
-    if (meta.GroupByFields__c != null) {
-      List<String> groupByFields = meta.GroupByFields__c.split(',');
-      for (String groupByField : groupByFields) {
-        queryFields.add(groupByField.trim());
-      }
+    List<String> groupByFields = meta.GroupByFields__c?.split(',') ?? new List<String>();
+    for (String groupByField : groupByFields) {
+      queryFields.add(groupByField.trim());
     }
     for (RollupOrderBy__mdt orderByInfo : meta.RollupOrderBys__r) {
       queryFields.add(orderByInfo.FieldName__c.trim());
@@ -2843,21 +2847,11 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   }
 
   private static List<SObject> getTriggerRecords() {
-    if (records != null) {
-      return records;
-    }
-
-    return (Trigger.isDelete ? Trigger.old : Trigger.new).deepClone(true, true, true);
+    return records ?? (Trigger.isDelete ? Trigger.old : Trigger.new).deepClone(true, true, true);
   }
 
   private static Map<Id, SObject> getOldTriggerRecordsMap() {
-    if (oldRecordsMap != null) {
-      return oldRecordsMap;
-    } else if (Trigger.oldMap != null) {
-      return Trigger.oldMap.deepClone();
-    }
-
-    return new Map<Id, SObject>();
+    return oldRecordsMap ?? Trigger.oldMap?.deepClone() ?? new Map<Id, SObject>();
   }
 
   @SuppressWarnings('PMD.OperationWithLimitsInLoop')
